Save/Update files [ci skip]

--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -1536,7 +1536,7 @@
  parlaments.19.d:0 "増税に賛成する投票は、[Root.GetName]では非常に説得が難しいものとなっている。数多くの抗議の後、その地域の議員は我々の提案に対する彼の支持を撤回し、現在は彼の再選への危惧から反対に回っている。"
  parlaments.19.a:0 "OK"
  parlaments.20.t:0 "都市での生活"
- parlaments.20.d:0 "[Root.Capital.GetCapitalName]から時にはかなり離れている地域の代表として、多くの議員は、訪問中の首都での生活が、彼らが慣れ親しんできたものとは非常に異なることにしばしば気づく。いくつかの人はそれが窮屈で不潔なものだと感じ、多くの人は故郷に帰るとかなり安心するようだ。\n\n今年は、我々の議員たちの繊細な感性が耐えることが、通常よりもより困難であることが明らかである。暑い月は異常に暑く、湿った月は異常に湿っていて、寒い月は異常に寒い。多くの議員が、もううんざりだと判断して、滞在をより快適にするよう我々に近づいてきた。"
+ parlaments.20.d:0 "時には[Root.Capital.GetCapitalName]からかなり離れている地域の代表として、多くの議員は、訪問中の首都での生活が、彼らが慣れ親しんできたものとは大きく異なることに気づくことがよくある。窮屈で不潔なだと感じる人もいるし、故郷に帰るとかなり安心する人も多いようだ。\n\n今年は我々の議員たちの繊細な感性にとって、例年以上に耐えがたい年であることは明らかだ。暑い月は異常に暑く、湿った月は異常に湿っていて、寒い月は異常に寒い。多くの議員が、もううんざりだと判断して、より快適な滞在を実現するよう求めて我々のところにやって来た。"
  parlaments.20.a:0 "我々はできることをしなければならない。"
  parlaments.20.b:0 "彼らは他の者たちと同じように我慢する必要がある。"
  parlaments.21.t:0 "議員の不祥事"
@@ -1609,8 +1609,8 @@
  NO_INTERACTIONS:0 "宗主国である$COUNTRY|Y$は、我々との従属国相互作用を持っていません。"
  CALCULATING_CHECKSUM:0 "バージョンを計算中…"
  PLS_WAIT_CHECKSUM:0 "バージョンの計算が完了するまでお待ちください。"
- ACHIEVEMENTS_CAN_BE_EARNED:0 "この期間、実績を獲得することが§G可能です。§!"
- ACHIEVEMENTS_CANNOT_BE_EARNED:0 "この期間、実績を獲得することは§R不可能です。§!"
+ ACHIEVEMENTS_CAN_BE_EARNED:0 "この期間、実績を獲得することが§G可能§!です。"
+ ACHIEVEMENTS_CANNOT_BE_EARNED:0 "この期間、実績を獲得することは§R不可能§!です。"
  FORTS_ACTIVE:0 "$X$要塞が有効"
  CONFIRM_MOTHBALL_ALL_TITLE:0 "すべての要塞を使用停止にしますか？"
  CONFIRM_MOTHBALL_ALL_DESC:0 "これはすぐに全要塞を使用停止にし、守備隊を枯渇させます。"
