--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1160,17 +1160,17 @@
  mer_marwar_rivalry_title:0 "領内の秩序"
  mer_marwar_rivalry_desc:0 "マールワールのラートール氏族の最近の反抗は我が家臣の間のさらに大きな秩序を保つ必要がある事を極めて明白にした。我々の全ての土地が安泰となるまで休むことはできない。"
  mer_conquer_kathiawar_title:0 "カーティヤーワール征服"
- mer_conquer_kathiawar_desc:0 "カーティヤーワールやグジャラートはかつて繁栄したラージプート王朝の本拠地であったが、ラージプーターナーと同様、無数の小王国と敵対的なスルタン国に分かれていた。侵略者に対する統一戦線をもう一度示す為、サウラーシュトラのラージプートとグジャラート北部を統一しせねばならない。"
+ mer_conquer_kathiawar_desc:0 "カーティヤーワールやグジャラートはかつて繁栄したラージプート王朝の本拠地であったが、ラージプーターナーと同様、無数の小王国と敵対的なスルタン国に分割されてしまった。侵略者に対する統一戦線をもう一度示すため、サウラーシュトラのラージプートとグジャラート北部を統一せねばならない。"
  capital_for_rajputana_title:0 "都市ウッジャイン"
  capital_for_rajputana_desc:0 "ウッジャインはインドで最も神聖な都市の一つであり、長い間ラージプート統一王国の自然発生的な首都であった。この都市がかつて持っていた役割を再度果たせるように、一度この都市を大都市へと刷新する時だ。"
  mer_avanti_title:0 "マールワーの征服"
- mer_avanti_desc:0 "マールワー高原が強大なラージプート王国の中心地であった時代、そして帝国都市カナウジの拠点が征服された時代があった。今なおラージプートはこの地域の人口のかなりの部分を占め、これら多くの親類が我が理念に恐らく加わるだろう\n。マールワー高原を侵略し、マールワーの真の支配者は我が一族である事を世界に示そう。"
+ mer_avanti_desc:0 "かつてマールワー高原は強大なラージプート王国の中心地であり、帝国都市カナウジが征服された拠点でもあった。今なおラージプート族はこの地域の人口のかなりの部分を占めており、これら親類の多くが我が理念に加わる可能性がある。\nマールワー高原を侵略し、マールワーの真の支配者は我が一族である事を世界に示そう。"
  mer_unite_rajputana_title:0 "ラージプーターナーの統一"
  mer_unite_rajputana_desc:0 "あまりに長い間、ラージプートの王国は分裂しており、お互い争う事に忙しい。共通の敵の前に向かうよう示す為にラージプーターナー全域を統一しよう。一度統一したなら、ラージプートの武勇と勇敢さが我々がかつて祖先が失った全てを回復させる事をできるようにする。"
  mer_reclaim_delhi_title:0 "デリーの返還"
  mer_reclaim_delhi_desc:0 "今日まで何世紀にも渡って、デリーはインドにおいてスルタンによる支配の象徴であったが、かつてはラージプートの都市であった。我が祖先が失ったものを取り戻し、亜大陸を支配している全てのスルタン国に強烈なメッセージを送らねばならない。"
  mer_restore_kanyakubja_title:0 "カナウジ征服"
- mer_restore_kanyakubja_desc:0 "カナウジはかつてはそうであったガ、今日では大都市ではない、しかし、ガンジス平野は依然として地球上で最も肥沃な地域の一つである。我が祖先がかつて征服や保護の為に争った土地を取り戻す時だ。"
+ mer_restore_kanyakubja_desc:0 "カナウジはかつてはそうであったが、今日では大都市ではない、しかし、ガンジス平野は依然として地球上で最も肥沃な地域の一つである。我が祖先がかつて征服や保護のために争った土地を取り戻す時だ。"
  mer_magadha_title:0 "マガダとヴァーラーナシー"
  mer_magadha_desc:0 "カナウジを支配しているので、ガンジス川に沿って、さらに東、ヴァーランシーやパトナ、ガヤーの神聖都市に向かって軍隊を派遣せねばならない。"
  mer_marwari_horses_title:0 "マルワリ馬"
@@ -1186,7 +1186,7 @@
  mer_hills_of_gondwana_title:0 "ゴンドワナの丘陵"
  mer_hills_of_gondwana_desc:0 "多くの我が親族はゴンド王国の間で名を上げるようになった。今や、彼らへの支配権があると分かっているので、東の丘陵やジャングルの支配を拡大する事はごく自然な事である。"
  mer_fortify_rajputana_title:0 "ラージプーターナーの要塞化"
- mer_fortify_rajputana_desc:0 "我々の土地は豊かではないが、ラージプーターナーは未だ手の届く所に多くの強敵がいる地域である。ラージプーターナーの丘陵に一連の要塞、侵略者が横断の際に悪戦苦闘するであろう防御線を構築する為に、この時代の最高の建築家を雇おう。\nこれら要塞が我々の臣下の抑制にも役立つならば、それは素晴らしい付加利益だ。"
+ mer_fortify_rajputana_desc:0 "我々の土地は豊かではないが、ラージプーターナーは未だ多くの強敵がすぐ近くにいる地域である。この時代の最高の建築家を雇い、ラージプーターナーの丘陵に一連の要塞を建設し、侵略者が横断の際に悪戦苦闘するであろう防御線を構築しよう。\nこれら要塞が我々の臣下の抑制にも役立つならば、それは素晴らしい付加利益だ。"
  mer_jawar_silver_mine_title:0 "ジャワール銀山"
  mer_jawar_silver_mine_desc:0 "ジャワールに銀が発見されたので、来るべき世代の為の経済的な安定性を得た。しかし、これは無駄遣いしないようにする必要がある遺産である。"
  mer_udaipur_title:0 "ウダイプル創設"
