--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -183,11 +183,11 @@
  anglican_events.12.b:0 "否定のしようがない程の教皇主義者だけを破壊しろ。"
  anglican_events.12.c:0 "聖像破壊運動に終止符を打て。"
  anglican_events.13.t:0 "カトリックの扇動者"
- anglican_events.13.d:0 "$COUNTRY$はローマと正式に袂を分かっているが、教皇は[Root.Monarch.GetName]に対する陰謀を組織することで我々の問題に干渉し続けている。イエズス会と司祭は、彼のスパイの間に数多く存在し、裏切り者たちによって保護されている。\n\nこれらの隠れカトリックたちは、法律からカトリックのスパイたちを隠す狡猾な方法を採用し、壁の裏、床板の下、隠れた地下通路に秘密の場所を構築している。これらの「司祭の穴」に隠れていることで、占有者に怪我を負わせたり、息の根を止めることが可能であり、一旦その場所を突き止めれば、素早く逃げ出すことはできないであろう。"
+ anglican_events.13.d:0 "$COUNTRY$はローマと正式に袂を分かっているが、教皇は[Root.Monarch.GetName]に対する陰謀を画策し、我々の問題に干渉し続けている。スパイの中にはイエズス会や司祭も数多く存在し、国教忌避者によって保護されている。\n\nこれらの隠れカトリックたちは、カトリックのスパイたちを法律から隠す狡猾な方法を採用しており、壁の裏、床板の下、隠れた地下通路に秘密の場所を構築している。これらの「司祭の穴」に隠れていると、居住者が怪我をしたり、窒息する可能性があるため、一旦その場所を突き止めれば、素早く逃げ出すことはできないであろう。"
  anglican_events.13.a:0 "国全体で司祭狩りを行う。あらゆる家を捜索せよ！"
  anglican_events.13.b:0 "彼らがどこから来ているかを調べろ。"
  anglican_events.14.t:0 "$COUNTRY$国教会"
- anglican_events.14.d:0 "宗教改革が急速にヨーロッパの宗教情勢を変化させたため、$COUNTRY$はその信仰について確固とした立場を取らなければならなくなっている。当然、これは宮廷において激しい議論を巻き起こした。ある者はプロテスタントの理念を支持し、他のものは伝統的宗派を擁護している。\n\nしかしながら、[Root.Monarch.GetTitle][Root.Monarch.GetName]は別の宗派を創設するという新しいアイデアを持っている。[Root.Monarch.GetTitle]を首長とする宗派は教会と国家の幸福な結合体となるだろう。プロテスタントでもカトリックでも改革派でないので、その宗派は状況に応じて教義については柔軟な対応をとることができる。\n\nそのような教会は好都合である。もはや上位の教会の権威に従属する必要がなく、[Root.Monarch.GetTitle]は好きに結婚したり離婚したりできるうえ、国家の神学的な方針を決定でき、その宗派は神の名によって直接、統治を任じられるという保証ができるのである。"
+ anglican_events.14.d:0 "宗教改革が急速にヨーロッパの宗教情勢を変化させたため、$COUNTRY$はその信仰について確固とした立場を取らなければならなくなっている。当然、これは宮廷において激しい議論を巻き起こした。ある者はプロテスタントの理念を支持し、他のものは伝統的宗派を擁護している。\n\nしかしながら、[Root.Monarch.GetTitle][Root.Monarch.GetName]は別の宗派を創設するという新しいアイデアを持っている。[Root.Monarch.GetTitle]を首長とする宗派は教会と国家の幸福な結合体となるだろう。プロテスタントでもカトリックでも改革派でもないので、その宗派は状況に応じて教義については柔軟な対応をとることができる。\n\nそのような教会は好都合である。もはや上位の教会の権威に従属する必要がなく、[Root.Monarch.GetTitle]は好きに結婚したり離婚したりできるうえ、国家の神学的な方針を決定でき、その宗派は神の名によって直接、統治を任じられるという保証ができるのである。"
  anglican_events.14.a:0 "新たな国教会を設立する"
  anglican_events.14.b:0 "新教会の福音を世界に説こう！"
  anglican_events.14.c:0 "これを一つの宗派とするには根拠が乏しいと思われる。"
@@ -387,15 +387,15 @@
  NAVAL_DOCTRINE_CANNOT_AFFORD:1 "§R現在、海軍ドクトリンを変更する余裕はありません。§!"
  NAVAL_DOCTRINE_REMOVE_CURRENT:0 "このドクトリンを選択すると、現在のドクトリンである$DOCTRINE|Y$が削除され、その恩恵を失います。"
  fleet_in_being:0 "現存艦隊主義"
- fleet_in_being_desc:0 "我々の海軍の影響は、最も有利な条件を除いて、艦隊が港を出る費用を費やすことなく感じられるものであるべきだ。"
+ fleet_in_being_desc:0 "最も有利な条件下を除き、艦隊の出港費用をかけることなく、我々の海軍の影響力を感じられるべきだ。"
  free_oarsmen:0 "自由な漕ぎ手"
- free_oarsmen_desc:0 "我々は、奴隷や有罪となった者たちからなる漕手を持つことへの誘惑と戦うべきだ。逆境に直面しても快活で、逃亡に対し耐性のある自由な漕手たちが、我々の海軍の筋肉を構成するべきだ。"
+ free_oarsmen_desc:0 "我々は、奴隷や囚人たちにガレー船を漕がせることへの誘惑と戦うべきだ。逆境に直面しても強く、逃亡に対し耐性のある自由な漕手たちが、我々の海軍の筋肉を構成するべきだ。"
  merchant_navy:0 "商船隊"
- merchant_navy_desc:0 "我々の艦隊の主要な指令は、国家の財政的利益に役立つことである。我々の貨物船に外国の富が積み込まれていることを確実にするため、あらゆる努力が払われるべきだ。"
+ merchant_navy_desc:0 "我々の艦隊の主要な指令は、国家の財政的利益に役立つことである。我々の貨物船に外国の富が確実に積み込まれているよう、あらゆる努力が払われるべきだ。"
  ship_boarding:0 "移乗"
  ship_boarding_desc:0 "賞金に関する規則の確立と、寛大な私掠免許状によって、我々は敵の船を無傷のまま奪う慣習を育てるだろう。"
  wooden_wall:0 "板壁"
- wooden_wall_desc:0 "急速に変化する世界において、海は我が国にとって非常に重要である。我々の支配を守る手段としても、防衛の第一線としても、木製の壁が優先されるべきだ。"
+ wooden_wall_desc:0 "急速に変化する世界において、海は我が国にとって非常に重要である。我々の支配を守る手段としても、防衛の第一線としても、我々の木製板壁が勝利するのだ。"
  alert_can_set_naval_doctrine_instant:1 "§Y海軍ドクトリンが選択可能§!"
  alert_can_set_naval_doctrine_delayed:1 "我々は十分に高い海軍扶養限界に達しており、恒久的な海軍のボーナスを与える海軍ドクトリンを選択できるようになりました。"
  alert_losing_innovativeness_instant:0 "§Y革新性の低下§!"
