--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -325,7 +325,7 @@
  seven_cities_events.413.a:0 "弾薬を節約しよう。"
  seven_cities_events.413.b:0 "獣との戦いを支援しよう。"
  seven_cities_events.414.t:0 "死の湖"
- seven_cities_events.414.d:0 "原住民は囁き、静かな水面に向かって不吉な視線を投げかける。彼らは非常に大きな蛇や怪物の形でそこに霊魂が存在すると言う。彼らは、この霊魂が水面のカヌーを待ち伏せ、水中の墓へと引き寄せると主張している。それは怪物の仕業ではないかもしれないが、あるいは迂回して回り道をするのが賢明だろうか？"
+ seven_cities_events.414.d:0 "原住民はひそひそ話し、静かな水面に向かって不吉な視線を投げかける。そこには巨大な蛇や怪物の姿をした精霊がいると原住民は言う。彼らは、この精霊が水面のカヌーを待ち伏せ、水中の墓場へと引きずり込むと主張している。それは怪物の仕業ではないかもしれないが、迂回して回り道をするのが賢明だろうか？"
  seven_cities_events.414.a:0 "迂回しよう。"
  seven_cities_events.414.b:0 "怪物など存在しない、近道を行こう。"
  seven_cities_events.500.a:0 "おぞましい！"
