--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -788,16 +788,16 @@
  IS_NOT_ACCEPTED_CULTURE_IN_REP:0 "$CULTURE|Y$文化は$COUNTRY|Y$共和国では受容されていない文化です。"
  IS_SAME_CULTURE_GROUP_IN:0 "$CULTURE|Y$文化は$COUNTRY|Y$の主要文化と同じ文化グループ（$CULTUREGROUP|Y$）です。"
  WHO_CONTROL_PROVINCE_EFFECTS:0 "§Yもし$WHO$が$PROV$を支配した時の影響：§!"
- bg_info_prestige_1:0 "農民でさえ$WHO|Y$を見下す。"
+ bg_info_prestige_1:0 "農民でさえ$WHO|Y$を見下している"
  bg_info_prestige_2:0 "$WHO|Y$を気にする人は誰もいない"
  bg_info_prestige_3:0 "人々は$WHO|Y$について聞いたことがある"
- bg_info_prestige_4:0 "$WHOADJ|Y$の国はよく知られていない。"
+ bg_info_prestige_4:0 "$WHOADJ|Y$の国はよく知られていない"
  bg_info_prestige_5:0 "$WHO|Y$は見下されている"
  bg_info_prestige_6:0 "$WHO|Y$はかなりよく知られている"
  bg_info_prestige_7:0 "$WHO|Y$はよく知られている"
- bg_info_prestige_8:0 "人々は$WHOADJ|Y$の様式に倣っている"
+ bg_info_prestige_8:0 "人々は$WHOADJ|Y$の様式を模倣している"
  bg_info_prestige_9:0 "人々は$WHOADJ|Y$の国民を羨む"
- bg_info_prestige_10:0 "$WHO|Y$の名は世界中に轟いている。"
+ bg_info_prestige_10:0 "$WHO|Y$の名は世界中に轟いている"
  bg_info_prestige_11:0 "$WHO|Y$は偉大なり"
  RELATION_CHANGE_HEADER_DESC:0 "$WHO|Y$は以下の国々との関係を変えるでしょう："
  HAVE_MIL_ACC_US:0 "彼らは我が国での軍事通行権を持っています。"
