Save/Update files [ci skip]

--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -392,7 +392,7 @@
  kor_fortify_korea_desc:2 "チョルリジャンソン、「千里長城」は、朝鮮半島北部に広がる要塞群であり、女真族の略奪から人々を守るため、我々の祖先たちによって建設された。朝鮮の安全を確保するため、良く修繕された状態を維持する必要がある。"
  kor_built_the_wall:0 "千里長城"
  desc_kor_built_the_wall:2 "チョルリジャンソン、「千里長城」は、朝鮮半島北部に広がる要塞群であり、女真族の略奪から人々を守るため、我々の祖先たちによって建設された。"
- kor_fortify_korea_tooltip:0 "このミッションの条件を満たす州に、基礎人的資源が§Y+2§!、補正§Y千里長城§!（州の要塞防御§G+25%§!）が付与されます。"
+ kor_fortify_korea_tooltip:0 "このミッションの条件を満たす州に、基本人的資源が§Y+2§!、補正§Y千里長城§!（州の要塞防御§G+25%§!）が付与されます。"
  kor_fortify_korea_2_title:0 "隠者の王国"
  kor_fortify_korea_2_desc:0 "領土が小さく、中国や日本、満州といった自国より強力な国家（団結時）の間に位置しているので、朝鮮が長年にわたって頻繁に侵略を受けてきたことは、当然のことだ。侵略に対する安全確保の方法は、自国に誰も立ち入れないようにすることだけだ。"
  kor_built_the_wall_2:0 "隠者の王国"
