--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -1533,7 +1533,7 @@
  NOCOLONISTS:0 "派遣できる植民者がいません。"
  SENDCOLONIST:0 "植民地を拡大するために植民者を送ります。"
  ABANDONCOLONY:0 "この植民地を放棄することで$COUNTRY$による植民化進行度はリセットされ、植民地にする望みは絶たれます。"
- BASETAX:0 "基礎税収値はこの州の基礎価値であり、この州で予想される税収を示します。"
+ BASETAX:0 "基本税はこの州の基礎価値であり、この州で予想される税収を示します。"
  COLONYTIME:0 "ここに植民者を派遣するには$TIME$日かかります。"
  COLONYNATIVE:0 "この州には§Y$NUMBER$§!人の原住民がいます。彼らは我々を歓迎してくれるかしれませんし、してくれないかもしれません。"
  COLONYNATIVEHOST:0 "原住民の攻撃性は、彼らが我々の入植者を攻撃する可能性を示します。"
@@ -7216,7 +7216,7 @@
  MDEATH_PU_CONTINUES:0 "§Y$COUNTRY$§Wとの同君連合は継続します"
  HAVE_LESS_DIPLOMATIC_RELATION:0 "以下より悪い関係である："
  HAVE_DIPLOMATIC_RELATION:0 "以下より良い関係である："
- AND_TRIGGER_STARTS:0 "以下の全てが満たされている"
+ AND_TRIGGER_STARTS:0 "以下のすべてが満たされている"
  IS_IN_WAR_TRIGGER_STARTS:0 "戦争中である"
  REVOLUTIONARY_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$独立戦争"
  end_bosphorous_sound_toll_title:0 "海峡通行料の廃止"
