--- a/source/localisation/winds_of_change_l_english.yml
+++ b/source/localisation/winds_of_change_l_english.yml
@@ -862,7 +862,7 @@
  ITA_if_we_have_majority_of_trade_power:0 "§Yアレクサンドリア§!交易ノードで最大の§Y州交易力§!を持っている場合："
  ITA_religious_diplomats:0 "階級特権「§Y宗教外交官§!」が強化され、§Y最大絶対主義§!の低下がなくなり、§Yコプト正教会§!の国と同盟している間、異端の寛容度が§G+2.00§!されるようになります。"
  ITA_having_a_coptic_ally:0 "§Yコプト正教会§!の同盟国を持つことで、異端の寛容度が§G+2.00§!されます。"
- ITA_spread_base_tax_and_base_production:0 "我々が領有している州に基本税§G10§!、基礎生産§G10§!を分配します。"
+ ITA_spread_base_tax_and_base_production:0 "我々が領有している州に基本税§G10§!、基本生産§G10§!を分配します。"
  ITA_rightful_heirs_title:0 "正統後継者"
  ITA_rightful_heirs_desc:1 "ローマの遺産は共通のものである。強大なヨーロッパの君主たちは、こぞって自らをカエサルやオクタウィアヌスなどの正統な後継者として称える機会を狙っている。すべての神聖ローマ皇帝やルームの支配者たちは、最も偉大な帝国がウィーンやコンスタンティノープルからではなく、ローマから始まることを忘れているようだ。"
  ITA_holy_roman_delusions_title:0 "神聖ローマの妄想"
@@ -1298,7 +1298,7 @@
  incorporate_vassal_desc:1 "[From.GetName]を行政に一体化してもよろしいですか？これにより、§Y[From.GetName]§!は§Y一体化された属国§!に変わります。これは、通常の§Y属国§!よりも§Y外交併合§!が§G-25.0%§!されますが、領土管理限界が§R-100.00§!される従属国のタイプです。また、§Y[From.GetName]§!を一体化するということは、属国を§Y外交併合§!するために§Y10§!年待つ必要があることを意味しています。\n\n§Y[From.GetName]§!の一体化は取り消せません。"
  GER_unlock_diploma_andreanum:1 "§Y[Root.GetNobilityName]§!の階級特権「§Yアンドレアナム許可状の更新§!」が解禁されます。テリトリーの領土管理コストを§G-5.0%§!し、§Y平均自治率§!が§Y25.0%§!未満なら、受容文化の州の人的資源§G+10.0%§!を得られます。"
  GER_low_average_autonomy_buff:0 "§Y平均自治率§!が§Y25.0%§!を下回るとき、以下を得ます：\n　受容文化の州の人的資源が§G+15.0%§!"
- GER_distribute_10_base_tax_5_base_production:0 "§Yドイツ§!文化以外の我々が領有している州に基本税§G10§!、基礎生産§G5§!を分配します。"
+ GER_distribute_10_base_tax_5_base_production:0 "§Yドイツ§!文化以外の我々が領有している州に基本税§G10§!、基本生産§G5§!を分配します。"
  GER_begin_integrating:2 "選択文化の統合を開始します。§Y文化的統一§!が§Y100.0§!になると、統合プロセスが完了します。"
  german_cultural_disunity_reform:0 "文化的な分裂"
  german_cultural_disunity_reform_desc:0 "神聖ローマ帝国の下で何世紀にもわたって分断が続いたため、ドイツ人は完全に分裂してしまった。これを正す必要がある。"
@@ -2014,10 +2014,10 @@
  desc_ned_connection_to_the_baltic:0 "バルト海における接続が確保された今、さらなる交易が可能になった。"
  ned_found_dutch_states_army:0 "州軍の創設"
  desc_ned_found_dutch_states_army:0 "州軍のおかげで、我々はあらゆる侵略者から州を守ることができる。"
- ned_empowered_staatse_leger:0 "Staatse Leger"
- ned_low_countries_fort_buff:0 "Fort Building"
+ ned_empowered_staatse_leger:0 "スターツェ・レガー"
+ ned_low_countries_fort_buff:0 "要塞建設"
  desc_ned_low_countries_fort_buff:0 ""
- ned_low_countries_fort_buff_buffed:0 "Fort Building"
+ ned_low_countries_fort_buff_buffed:0 "要塞建設"
  desc_ned_low_countries_fort_buff_buffed:0 ""
  ned_dutch_cloth_trading:0 "オランダ布地の交易"
  desc_ned_dutch_cloth_trading:0 "この地域の織物の多くはオランダ商人によって管理されている。"
@@ -3783,7 +3783,7 @@
  cb_sunset_invasion_desc:0 "ヨーロッパ大陸の卑劣な植民地主義者たちは、あえて我々の大陸に足を踏み入れた。今より我々は自立するのだ。"
  SUN_sunset_invasion_wargoal:0 "優位性を示す"
  SUN_sunset_invasion_wargoal_desc:0 "戦争の目標は戦闘に勝利して我が軍の優位性を示すことです。"
- SUN_SUNSET_INVASION_WARNAME:1 "The $ORDER$Invasion of $SECOND_NAME$"
+ SUN_SUNSET_INVASION_WARNAME:1 "$ORDER$$SECOND_NAME$侵攻"
  SUN_ALL_EUROPE:0 "§Y西ヨーロッパ§!亜大陸に属するすべての州と§Yマグリブ§!地方"
  SUN_ALL_FAR_EAST:0 "§Y極東§!および§Y中華§!亜大陸に属するすべての州"
  estate_burghers_SUN_support_recovering_populations:0 "人口の回復の支援"
@@ -4179,8 +4179,8 @@
  hussite_protest.1.c.emperor_pick_conditions_tt:1 "\n皇帝が§Y1§!州まで減少しており、§Yフス派§!の敵に対して§Y-50§!未満の戦勝点でこのオプションを選択します。"
  hre_dominant_hussite:0 "フス派の帝国"
  desc_hre_dominant_hussite:0 "フス派の信仰は、神聖ローマ帝国の公式の宗教である。この信仰に従うことは、我が国に一定の道徳的正統性を与える。"
- KNIZE:0 "Kníze"
- KRAL:0 "Král"
+ KNIZE:0 "クニージェ"
+ KRAL:0 "クラール"
  CISAR:0 "Císar"
  KNEZNA:0 "Knezna"
  KRALOVNA:0 "Královna"
@@ -5038,7 +5038,7 @@
  HAB_MODIFY_BULWARK_OF_CATHOLICISM:0 "§Yカトリックの防波堤§!に以下の補正：\n　帝国の権威補正：§G+0.05§!"
  HAB_IF_BYZANTIUM_IS_OUR_SUBJECT:0 "§Y[BYZ.GetName]§!が我々の§Y従属国§!である場合："
  HAB_ALL_HRE_NATIONS_GAIN_50_MANA:1 "全ての§Y帝国諸侯§!は各君主点を§G+50§!獲得します。"
- HAB_BUFF_RELIGIOUS_DIPLOMATS:0 "§Y宗教外交官§!の聖職者特権は、同じ宗教の評価を追加で§G+10§!与えるようになります。"
+ HAB_BUFF_RELIGIOUS_DIPLOMATS:0 "聖職者特権の§Y宗教外交官§!は、同一宗教の評価を追加で§G+10§!与えるようになります。"
  HAB_UNLOCK_BLACK_ARMY:0 "傭兵団§Y黒軍§!の雇用が解禁されます。"
  HAB_GET_NEW_MISSIONS:0 "§Yドイツ統一§!の分岐ツリーに切り替えます。"
  hab_preview_germany_branch:1 "「§Oドイツ統一§!」の分岐をプレビュー表示します。"
@@ -5467,7 +5467,7 @@
  cb_reconquest_of_china_desc:0 "チンギス・ハンに匹敵する帝国を築くのだ。しかし、その前に元を奪還しなければならない。"
  TIM_yuan_reconquest:0 "優位性を示す"
  TIM_yuan_reconquest_desc:0 "戦争の目標は戦闘に勝利して我が軍の優位性を示すことです。"
- TIM_YUAN_RECONQUEST_WARNAME:1 "The $ORDER$Invasion of $SECOND_NAME$"
+ TIM_YUAN_RECONQUEST_WARNAME:1 "$ORDER$$SECOND_NAME$侵攻"
  TIM_bring_taxation_under_control_title:0 "国庫の回復"
  TIM_bring_taxation_under_control_desc:0 "我々の財政は惜しみないソユールガールの交付金によって悪化している。我々はもう一度、国庫を強化する必要がある。"
  TIM_supremacy_of_the_sharia_title:0 "シャリーアの優越"
@@ -5633,7 +5633,7 @@
  TIM_crush_rebellion_desc:0 "戦争の目標は特定の州を占領することです。"
  TIM_CRUSH_REBELLION_WARNAME:0 "アジャムの反乱"
  TIM_GURKANI:0 "グーラカーン"
- TIM_GURKANI_ADJ:1 "Gurkanid"
+ TIM_GURKANI_ADJ:1 "グラーカーン"
  TIM_seized_4_times:0 "§Y領地の接収§!を§Y4§!回以上実行している"
  has_won_at_least_15_battles:0 "戦闘に§G15§!回以上§Y勝利§!している。（現在：§Y[Root.GetAmountofBattles]§!）"
  has_won_at_least_50_battles:0 "戦闘に§G50§!回以上§Y勝利§!している。（現在：§Y[Root.GetAmountofBattles]§!）"
@@ -5903,7 +5903,7 @@
  MUG_upgrade_grant_jains_liberties:0 "§Y[Root.GetJainsName]§!の階級特権「§Yジャイナ教徒の自由の付与§!」が強化され、§Yコロマンデル§!交易ノードを利用した時に交易力§G+25§!を与え、州の交易力補正が§G+10.0%§!されます。"
  MUG_unlock_trade_company_support_priv:0 "§Y[Root.GetJainsName]§!の階級特権「§Yマラッカの総督職を支援§!」が解禁されます。§Y交易会社§!に利益を与えます。"
  MUG_has_diplomat:0 "§Y外交官§!顧問を雇用していれば："
- MUG_decays_05_yearly:0 "Decays §R-0.25§! Yearly."
+ MUG_decays_05_yearly:0 "毎年§R-0.25§!減衰します。"
  MUG_more_chance_for_elephants:0 "Our units will be more likely to have the §YElephant§! model."
  MUG_unlock_rajput_mansabdar_privilege:1 "§Y[Root.GetRajputsName]§!の階級特権「§Yラージプート・マンサブダール§!」が解禁され、陸軍指揮官枠§G+1.00§!と忠誠度に応じて人的資源の回復速度§G+15.0%§!を得られますが、[Root.GetNobilityName]の影響力を§R-5.0%§!します。"
  MUG_distribute_10_base_manpower:1 "§Yラージャスターン§!文化の州に基本人的資源§G10§!を分配します。"
