--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -755,9 +755,9 @@
  EMPTY_BUILDING_SLOT_OTHER:0 "この建築枠は空いており、別の建造物を建設できます。"
  OBSOLETE_FORT:0 "§Y$ATTACKER$§!に対し、要塞が時代遅れなことから$VAL$の補正がかかります。"
  REDUCED_GARRISON:0 "最大数の半数未満の守備隊しか持たない要塞により$VAL$の補正。"
- IMP_BASE_TAX:0 "基本税収の改善"
- IMP_BASE_PROD:1 "基本生産性の改善"
- IMP_BASE_MP:1 "基本人的資源の改善"
+ IMP_BASE_TAX:0 "基本税の向上"
+ IMP_BASE_PROD:1 "基本生産の向上"
+ IMP_BASE_MP:1 "基本人的資源の向上"
  LEDGER_BASE_PROD:0 "（基本）"
  LEDGER_BASE_MP:0 "（基本）"
  LEDGER_BASE_TX:0 "（基本）"
@@ -766,8 +766,8 @@
  IMPR_PROD_IMCOME:0 " 月間生産収入：§G+$VAL$§!¤"
  IMPR_GOLD_IMCOME:0 " 月間金収入：§G+$VAL$§!¤"
  IMPR_TRADE_VALUE:0 " 交易額：§G+$VAL$§!¤（$TRADE_GOOD$）"
- IMPPR_TOO_MUCH_ONE_TYPE_ADM:0 "基本生産と人的資源の組み合わせよりも大きいため、§Y$PROVINCE$§!の基本税を向上させることができません。"
- IMPPR_TOO_MUCH_ONE_TYPE_DIP:0 "基本税と人的資源の組み合わせよりも大きいため、§Y$PROVINCE$§!の基本生産を向上させることができません。"
+ IMPPR_TOO_MUCH_ONE_TYPE_ADM:0 "基本生産と基本人的資源の組み合わせよりも大きいため、§Y$PROVINCE$§!の基本税を向上させることができません。"
+ IMPPR_TOO_MUCH_ONE_TYPE_DIP:0 "基本税と基本人的資源の組み合わせよりも大きいため、§Y$PROVINCE$§!の基本生産を向上させることができません。"
  IMPPR_TOO_MUCH_ONE_TYPE_MIL:0 "基本税と基本生産の組み合わせよりも大きいため、§Y$PROVINCE$§!の基本人的資源を向上させることができません。"
  IMPPR_NOT_OWNING_PROVINCE:0 "あなたが所有していない州では$ACTION|Y$することはできません。"
  IMPPR_NOT_OWN_NOR_SUBJ_OWN_PROVINCE:0 "あなた、あるいはあなたの従属国が所有していない限り、州で$ACTION|Y$することはできません。"
@@ -4899,7 +4899,7 @@
  MATCHMAKING_FILTER_VERSION_TOOLTIP:0 "ゲームバージョンが同じサーバーのみ表示"
  MATCHMAKING_FILTER_MOD_TOOLTIP:0 "使用されているMODが同じサーバーのみ表示"
  MATCHMAKING_FILTER_FRIENDS_TOOLTIP:1 "Steamのフレンドがいるサーバーのみ表示"
- COLONIST_PROGRESS_WORKING_SETTLEMENT_GROWTH:0 "$COUNTRY|Y$の$NAME|Y$は移民成長に従事しており、$PROVINCE|Y$の開発を徐々に増加させます。\n毎年$CHANCE|%1G$の確率で基本税収、生産力、人的資源のいずれかの$DEV|Y$が増加します。この確率は開発が高いほど低下し、州の開発コスト補正の影響を受けます。"
+ COLONIST_PROGRESS_WORKING_SETTLEMENT_GROWTH:0 "$COUNTRY|Y$の$NAME|Y$は移民成長に従事しており、$PROVINCE|Y$の開発を徐々に増加させます。\n毎年$CHANCE|%1G$の確率で基本税、基本生産、基本人的資源のいずれかの$DEV|Y$が増加します。この確率は開発が高いほど低下し、州の開発コスト補正の影響を受けます。"
  ENVOY_PROMOTING_SETTLEMENT_GROWTH:0 "$NAME|Y$は$PROV|Y$の移民成長を促進しています。"
  MACRO_MANUFACTORY_IN_GOLD_PROVINCES:0 "金を産出する州では工場を建設できない"
  colonial_government_legacy:0 "植民地政府"
