--- a/source/localisation/branching_mission_system_l_english.yml
+++ b/source/localisation/branching_mission_system_l_english.yml
@@ -36,7 +36,7 @@
  PREVIEW_COLOR:0 "§O"
  COLOR_END:0 "§!"
  NORMAL_COLOR:0 "§W"
- BYZ_unlock_branches_decision:1 "「§Y分岐ミッションのプレビュー表示§!」ボタンが出現し、進めていくミッションのプレビュー表示や選択ができるようになります。"
+ BYZ_unlock_branches_decision:1 "「§Y分岐ミッションのプレビュー表示§!」ボタンが出現し、追求するミッションのプレビュー表示や選択が可能になります。"
  BYZ_end_preview:1 "§Oプレビュー§!を終わります。現在選んでいるミッションツリーが選択されます。"
  mal_decide_for_conversion:0 "改宗ルート"
  mal_decide_for_tolerance:0 "寛容ルート"
