Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- LOCAL_AUTONOMY_EFFECTS:0 "現在の自治率は、$NAME$に以下の効果があります：\n$EFFECT$"
+ LOCAL_AUTONOMY_EFFECTS:0 "$NAME$での現在の自治率による影響：\n$EFFECT$"
  NO_LOCAL_AUTONOMY_EFFECTS:0 "$NAME$には、現在の自治率の効果はありません。"
  LOCAL_AUTONOMY_DECREASE_EFFECT:0 "$NAME$が§Y0.0%§!の不穏度を持つ場合、自治率を減少させることができる。\n\n"
  LOCAL_AUTO_CHANGE:0 "現在の推定では、以下の要因により毎月$DECREASE$変動します：\n$DESC$"
@@ -297,13 +297,13 @@
  PSK_ideas_start:0 "プスコフの伝統"
  PSK_ideas_bonus:0 "プスコフの宿願"
  veche_of_pskov:0 "プスコフのヴェーチェ"
- veche_of_pskov_desc:0 "プスコフの民会、あるいは最高評議会は、プスコフの王子さえも凌ぐ、プスコフで最も強力な政治組織であった。ポサードニクとsotskiys、国内のすべての内政関係を統制する官僚たちの選出を委託されていた。"
+ veche_of_pskov_desc:0 "プスコフの民会、あるいは最高評議会は、プスコフの王子さえも凌ぐ、プスコフで最も強力な政治組織であった。国内のすべての内政関係を統制する役人であるポサードニクとソトスキの選出を任されていた。"
  legacy_of_daumantas:0 "ダウマンタスの遺産"
  legacy_of_daumantas_desc:0 "もともとリトアニア公爵であったダウマンタスは、プスコフの軍勢を率いての戦いの後、彼を君主として選出することについてプスコフの人々を納得させることに成功した。正教会の洗礼を受けた彼はティモセウスと名乗り、後に、リトアニアとリヴォニア騎士団に対する軍勢を率いて成功し、プスコフの伝説的英雄となった。"
  balt_mercenaries:0 "バルト系傭兵"
  balt_mercenaries_desc:0 "ロシア王国の西の端にあるプスコフは、常に様々なバルト系の部族たちとの接触があった。少し粗野ではあるものの、それらの戦士たちは適正な対価で、常に多くと戦うことを熱望していた。"
  pskov_charter:0 "プスコフ憲章"
- pskov_charter_desc:0 "ロシアの歴史の中で最古の法典はプスコフで書かれ、その後、すべてのロシアの法典－スジェーブニクの一部に組み入れられた。"
+ pskov_charter_desc:0 "ロシアの歴史の中で最も古い法典はプスコフで書かれ、その後、全ロシア法典であるスジェブニクの一部に組み入れられた。"
  psk_knights_guard:0 "騎士親衛隊"
  psk_knights_guard_desc:0 "クニャージの個人的な護衛としての使命を帯びて、西洋傭兵騎士たちによって構成される特別な軍事組織を設立する。"
  arts_and_crafts_of_pskov:0 "プスコフの芸術と工芸"
@@ -549,7 +549,7 @@
  REVOLUTION_IS_TAKING_PLACE:0 "$WHERE$で革命が進行しています。"
  revolution_target:0 "革命の発祥地"
  REVOLUTION_TARGET_DESC:0 "革命の間、国家は$SCORE|+0%$のスコアを得ます。"
- FOLLOWING_EFFECTS:0 "これは以下の効果があります："
+ FOLLOWING_EFFECTS:0 "これによる影響："
  PEACE_DISMANTLE_REVOLUTION:0 "革命の解体"
  PEACE_CHANGE_HRE_RELIGION:0 "宗教至上主義"
  DISMANTLE_REVOLUTION:0 "革命が終了すると$WHO$は君主制に戻ります。"
@@ -1408,7 +1408,7 @@
  flavor_eth.18.d:0 "エチオピアの最後の司教が死亡して以来、我々は長い間、アレクサンドリアに後継者を要求している。マムルークの干渉だろうか？"
  flavor_eth.18.a:0 "OK"
  flavor_eth.19.t:0 "修道会"
- flavor_eth.19.d:0 "エチオピア教会の最大の強みの一つは、我が国の景観に点在する多数の成功した修道院である。修道会は、新たに征服された地域に新しい修道院を創設し、そこに真の信仰の言葉を広めることによって、州の成功に貢献してきた。エチオピアの修道院は、エチオピアの聖職者、その貴族および統治者の教育の源でもあり、過去数年間にエチオピア教会の活性化に大きく貢献している。\nしかし、このコインの裏面は、修道院とそれを実行する修道会が豊かで自治権のあるものとして成長しているということである。"
+ flavor_eth.19.d:0 "エチオピア教会の最大の強みの一つは、我が国の風景に点在する多数の修道院が成功を収めていることである。修道会は、新たに征服された地域に新しい修道院を創設し、そこに真の信仰の言葉を広めることによって、国家の成功に貢献してきた。エチオピアの修道院は、エチオピアの聖職者や貴族や行政官の教育の源でもあり、過去数年間にエチオピア教会の活性化に大きく貢献している。\nしかし、このコインの裏面は、修道院とそれを実行する修道会が富裕化し、自治権のあるものとして成長したということである。"
  flavor_eth.19.a:0 "彼らを抑えようとする。"
  flavor_eth.19.b:0 "修道会の特権を守る。"
  flavor_eth.20.t:0 "総主教からの独立"
