--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -760,7 +760,7 @@
  pay_papal_influence:0 "教皇庁に代表団を派遣"
  lose_mercantilism:0 "能力主義を推進"
  RANK:0 "ランク"
- GOVERNMENT_EFFECTS_DUE_TO_RANK:0 "§Y$RANK$の政府ランク§!により、この§Y政体§!は以下の効果があります：\n"
+ GOVERNMENT_EFFECTS_DUE_TO_RANK:0 "§Y$RANK$の政府ランク§!により、この§Y政体§!には以下の影響があります：\n"
  CURRENT_GOVERNMENT_RANK:0 "$COUNTRY_ADJ$政府は§Y$RANK$§!ランクです。"
  CURRENT_GOVERNMENT_RANK_US:0 "我々の政府ランクは§Y$RANK$§!です。"
  CURRENT_GOVERNMENT_RANK_DESC:0 "§Y$RANK1$§!、§Y$RANK2$§!、§Y$RANK3$§!の3つの政府ランクがあります。より上位の政府はボーナスを増やし、ナショナルフォーカス変更までの待機年数を減らします。"
@@ -776,7 +776,7 @@
  CANNOT_UPGRADE_RANK_HRE:1 "§R- 神聖ローマ帝国内の国は、選帝侯のみ政府ランクをアップグレードできますが、それでも王国までしか上げられません。§!\n"
  CANNOT_UPGRADE_RANK_HRE_ELECTOR:1 "§R- 神聖ローマ帝国の選帝侯は、王国より上の政府ランクにアップグレードすることはできません。§!\n"
  alert_lack_of_parliament_debate_instant:0 "§Y$NAME$における議論がない§!"
- alert_lack_of_parliament_debate_delayed:0 "$NAME$で進行中の議論がないため、自国に以下の効果があります："
+ alert_lack_of_parliament_debate_delayed:0 "$NAME$で議論が進行していないことによる影響："
  alert_too_few_seats_of_parliament_instant:0 "§Y$NAME$の議席不足§!"
  alert_too_few_seats_of_parliament_delayed:1 "$NAME$において§Y$NUM$§!議席以上が必要ですが、§R$AMT$§!議席しかありません。議席を増やさない場合は、追加の議席が自動的に割り当てられます。"
  START_DEBATE_TOOLTIP:0 "§Y議論を開始§!"
@@ -1469,7 +1469,7 @@
  fc_league_reforms:0 "都市同盟の改革"
  desc_fc_league_reforms:0 "新たな都市同盟の改革は、自由都市全体に広がっており、これらすべての国が偉大な成果を上げるのを助けるだろう。"
  ADD_SEAT_IN_PARLIAMENT_SHORT:0 "$NAME$の議席を与える"
- SEAT_PARLIAMENT_DESC:0 "これは以下の効果があります：\n"
+ SEAT_PARLIAMENT_DESC:0 "これによる影響：\n"
  ADD_SEAT_IN_PARLIAMENT_LONG:0 "州に$NAME$の議席を与えるといくらかのボーナスが与えられますが、すべての問題で議席の多数派をなだめる必要があります。"
  withdrawn_parliamentary_seat:0 "議席の取り上げ"
  desc_withdrawn_parliamentary_seat:0 "この州の人々は、彼らが我が国の政治上の正当な影響力を奪われたと感じている。"
@@ -1634,7 +1634,7 @@
  friendship_events.1.d:0 "人々の記憶にある限りではずっと、我々は[From.GetAdjective]との友人であると考えている。しかし、我々のかつての友人の手による最近の屈辱的な敗北により、我々の二つの国家間の歴史的な友情に関するすべての物語は単なる空言とみなされなければならない。故郷の母親は、[From.GetName]の軍隊の手による息子の死を知らされ、友情や平和さえも、もはや遠い夢のように思える。"
  friendship_events.1.a:0 "腐った裏切り者め！"
  friendship_events.2.t:0 "成長する敵意"
- friendship_events.2.d:0 "我々が現在の戦争で犠牲にしたものの一つが、[From.GetAdjective]と我々との長い友情の歴史であったようだ。惨敗の後、我々は彼らが我々を許さないことが危惧されることを、[From.GetAdjective]軍に付け加えた。"
+ friendship_events.2.d:0 "我々が現在の戦争で犠牲にしたものの一つが、[From.GetAdjective]と我々との長い友好の歴史であったようだ。我々が最近[From.GetAdjective]軍に大敗北を与えた後、彼らが我々を許さないであろうと危惧している。"
  friendship_events.2.a:0 "良い厄介払いだ。"
  opinion_religious_tension:0 "宗教的緊張"
  BUILDING_SLOT_UTILIZATION:0 "最大の建築物の数"
