--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1205,7 +1205,7 @@
  burghers_estate_events.9.b:0 "ギルドの特権を保護しなければならない。"
  burghers_estate_events.10.t:0 "社会的流動性"
  burghers_estate_events.10.d:0 "$ESTATE_BURGHERS$の権力の成長は、その階級の中から、伝統的に他の集団が占めていた分野に対して出世を目指す者が出てくることになった。$ESTATE_BURGHERS$の中位から下位の名家の子息たちは、今や特権階級に匹敵する教育と野心を持っており、その結果、行政官僚、弁護士、士官といった、伝統的に別の階級が占めていた地位にも雇用されるようになっている。$ESTATE_BURGHERS$は、彼らが時代遅れの古い権利と特権によって不当に抑圧されていると感じているが、彼らの敵対者は現在の「不自然な」社会的流動性に対し、非常にうんざりしている。\n我々が何かをしない限り、特権階級の支持が失われる危険があるが、この時点で$ESTATE_BURGHERS$への支持を撤回すれば、これは我々の関係に深刻な影響を与えるだろう。"
- burghers_estate_events.10.a:0 "我々はこれらの新しい人々の邪魔をするべきではない。"
+ burghers_estate_events.10.a:0 "我々はこれらの「新たな人々」の邪魔をするべきではない。"
  burghers_estate_events.10.b:0 "我々は他の階級の古い権利を保護する必要がある。"
  burghers_estate_events.11.t:0 "経済の成長"
  burghers_estate_events.11.d:0 "$ESTATE_BURGHERS$との協力の方針は、多くの分野において経済発展という形で実を結んだ。$ESTATE_BURGHERS$が支配する都市は繁栄しており、国際的な交易における我々の影響力は急速に拡大している。"
