--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -1491,7 +1491,7 @@
  COMBINED_BONUS_REWARD_NO:0 "\n£no£他条件を満たしている場合、以下のボーナス効果が発生します："
  FULFIL_FIRST_CONDITION_TO_SEE_MORE_TT:0 "§Y最初の条件を完了すると、変動条件が公開されます。§!"
  EVENT_INSIGHT_INTRO:0 "\n§Gイベントの見通し：§!"
- INSIGHT_JUST_TOOLTIP:0 "このイベントは以下の効果があります："
+ INSIGHT_JUST_TOOLTIP:0 "このイベントによる影響："
  SCALES_WITH_LOYALTY_TT:0 "§Y階級の忠誠度に比例します。§!"
  SCALES_WITH_INFLUENCE_TT:0 "§Y階級の影響力に比例します。§!"
  SCALES_WITH_CROWNLAND_TT:0 "§Y階級の直轄地に比例します。§!"
@@ -3630,7 +3630,7 @@
  estate_cossacks_military_service:0 "[Root.GetCossacksName]の兵役"
  estate_cossacks_military_service_desc:0 "彼らの文化が戦闘に注力しているため、[Root.GetCossacksName]は非正規部隊として[Root.GetAdjective]軍に仕え、騎兵部隊として歩兵と砲兵を支援している。"
  estate_cossacks_expand_cossacks_raiders:0 "[Root.GetCossacksName]の襲撃の公認"
- estate_cossacks_expand_cossacks_raiders_desc:0 "厳密に言うと、[Root.GetCossacksName]は[Root.GetName]市民であり、従って、自国の法に従わなければならない。実際には、ステップは例えば法律などのような概念にほぼ関心がない。[Root.GetCossacksName]は、彼らと国境を接する不幸者から必要なものを奪う。\n彼らの行動を合法化し、外国に対する彼らの襲撃を自国自身の責任としたならば、彼らに大きな便宜を図って上げることになるだろう。"
+ estate_cossacks_expand_cossacks_raiders_desc:0 "厳密に言うと、[Root.GetCossacksName]は[Root.GetName]市民であることから、自国の法に従わなければならない。実際には、ステップの民は例えば法律などのような概念にほぼ関心がない。[Root.GetCossacksName]は、彼らと国境を接する不運な人々から必要なものを奪う。\n我々が彼らの行動を合法化し、外国に対する彼らの襲撃を我々自身の責任としたならば、彼らにとって大きな恩義になるだろう。"
  estate_cossacks_expand_cossacks_raiders_gt:0 "イベント「§Yコサックの侵略§!」は今や§Y[Root.GetName]§!に対しさらなるボーナスをもたらします。"
  estate_cossacks_expand_cossacks_raiders_rt:0 "イベント「§Yコサックの侵略§!」はもはや追加ボーナスをもたらしません。"
  estate_cossacks_expand_cossacks_raiders_at:0 "[Root.GetCossacksName]が略奪品を持ち帰ったことで、以下の効果を得ます："
@@ -5420,8 +5420,8 @@
  eng_restores_clerical_privileges:0 "聖職者特権の保護"
  eng_reconcilation_with_the_holy_see:0 "教皇庁との和解"
  ave_unification_of_the_french_region:0 "フランスの統一"
- has_stolen_the_tripitaka_koreana:0 "高麗八万大蔵経が盗まれている"
- has_destroyed_the_tripitaka_koreana:0 "高麗八万大蔵経が破壊されている"
+ has_stolen_the_tripitaka_koreana:0 "高麗八万大蔵経が盗まれた"
+ has_destroyed_the_tripitaka_koreana:0 "高麗八万大蔵経が破壊された"
  has_spared_the_tripitaka_koreana:0 "高麗八万大蔵経を手放した"
  dan_early_victories:0 "早期の勝利"
  AVE:0 "アンジュー王国"
@@ -5506,7 +5506,7 @@
  gemeiner_pfennig_act:0 "一般帝国税法"
  act_of_imperial_diplomacy_at:0 "すべての§Y選帝侯§!は§Y[Root.GetName]§!の評価が§G+25§!されます。"
  parliament_decision_description:0 "§Y議会行動§!\n選択した議題に対する議論を[Root.GetParliamentOrFallbackName]において強制的に開始させます。これは一度限りの議題であり、一度通過したら再度議論することはできません。"
- DEBATE_EFFECT_TT:0 "この議題は無事可決された場合、以下の効果があります："
+ DEBATE_EFFECT_TT:0 "議題が無事可決された場合の影響："
  debate_acts_of_high_admiralty_issue_title:0 "[Root.GetParliamentOrFallbackName]：高等海軍本部法"
  debate_acts_of_maritime_courage_issue_title:0 "[Root.GetParliamentOrFallbackName]：海運度胸法"
  debate_acts_of_maritime_professionalism_issue_title:0 "[Root.GetParliamentOrFallbackName]：海運専門法"
