--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -2828,11 +2828,11 @@
  flavor_tim.0.a:0 "他の王子たちが何をするのかは時が経たなければ分からないだろう。"
  flavor_tim.0.a.tt:0 "§Yシャー・ルフ§!が§Yティムール朝§!の支配者であるかぎり、彼の息子や孫によって支配されている属国の独立欲求を大きく減らします。"
  flavor_tim.1.t:0 "シャー・ルフの死"
- flavor_tim.1.d:0 "戦争と強権支配の生涯を過ごした後、ティムールの後継者そして息子であるシャー・ルフがついに亡くなった。彼の人生の務めは、父親と共に建てた帝国を維持し、ティムールの死後統一し、その後彼自身の支配に対して起きた反乱を打ち消すことだった。\nシャー・ルフは帝国の多くの部分に平和をもたらし、彼の支配下では芸術と科学が花開いた。しかしながら、晩年の間、彼は頻繁に病気になった。そのため、彼の息子やいとこは必然的に継承戦争に備えてこの時間を利用した。"
+ flavor_tim.1.d:0 "ティムールの後継者であり息子であるシャー・ルフは、戦争と強権支配の生涯を終え、ついにこの世を去った。彼の人生の務めは、父親と共に建てた帝国を維持し、ティムールの死後に統一し、彼自身の支配に対して起きた反乱を鎮圧することだった。\nシャー・ルフは帝国の各地に平和をもたらし、彼の支配下では芸術と科学が花開いた。しかしながら晩年になると、彼は頻繁に病気になった。そのため、彼の息子やいとこは必然的に継承戦争に備えてこの時間を利用した。"
  flavor_tim.1.a:0 "私の時代がやって来た！"
  flavor_tim.1.a.tt:0 "§R我々はもはやシャー・ルフの評判の恩恵を受けることはなく、ティムール臣下の王子たちは、おそらく王座のために陰謀を開始するだろう。§!"
  flavor_tim.2.t:0 "シャー・ルフの死"
- flavor_tim.2.d:0 "戦争と強権支配の生涯を過ごした後、ティムールの後継者そして息子であるシャー・ルフがついに亡くなった。彼の人生の務めは、父親と共に建てた帝国を維持し、ティムールの死後統一し、その後彼自身の支配に対して起きた反乱を打ち消すことだった。\nシャー・ルフは帝国の多くの部分に平和をもたらし、彼の支配下では芸術と科学が花開いた。しかしながら、晩年の間、彼は頻繁に病気になった。そのため、彼の息子やいとこは必然的に継承戦争に備えてこの時間を利用した。"
+ flavor_tim.2.d:0 "ティムールの後継者であり息子であるシャー・ルフは、戦争と強権支配の生涯を終え、ついにこの世を去った。彼の人生の務めは、父親と共に建てた帝国を維持し、ティムールの死後に統一し、彼自身の支配に対して起きた反乱を鎮圧することだった。\nシャー・ルフは帝国の各地に平和をもたらし、彼の支配下では芸術と科学が花開いた。しかしながら晩年になると、彼は頻繁に病気になった。そのため、彼の息子やいとこは必然的に継承戦争に備えてこの時間を利用した。"
  flavor_tim.2.a:0 "私の時代がやって来た！"
  flavor_tim.2.a.tt:0 "§Yティムール§!はもはやシャー・ルフの評判の恩恵を受けることはなく、すべての臣下の王子たちは、おそらく王座のために陰謀を開始するだろう。"
  flavor_tim.2.b:0 "長きにわたり彼らは分裂するだろう。"
@@ -3694,7 +3694,7 @@
  desc_ven_council_of_ten_strong:0 "もともと、共和国制度への危険に対処することのみを目的としながら、十人委員会は、大評議会も成し得ないような、非常に広範な権限を与えられている。いく人かは、これはあまりに大きすぎる昇格であると段階であると感じているが、しかしながら、逆に、現在のところ、十人委員会自体が代表制度にとって最大の脅威であるかもしれない。"
  ven_ten_restrained:0 "十人委員会の抑制"
  desc_ven_ten_restrained:0 "権力が過度に拡大したため、十人委員会を拘束するための法律が制定された。今、正式に委員会が行動できる唯一の分野は、共和国の国家体制に対する陰謀や謀議を見つけ出すことだ。"
- ven_expanded_council:0 "ヴェネツィアの大評議会の拡大"
+ ven_expanded_council:0 "ヴェネツィア大評議会の拡大"
  desc_ven_expanded_council:0 "一定の年齢以上のすべての男性貴族は、大評議会に席を与えられた。"
  ven_barnabotti:0 "バルナボッティ"
  desc_ven_barnabotti:0 "増加している貧困に瀕した貴族たちは、もっぱら国家が自腹を切ることにより生活している。これらの貧しいバルナボッティは、賭博と、彼らの票を売ってヴェネツィアの制度を腐敗させることもいとわないことで知られている。"
@@ -3709,10 +3709,10 @@
  ven_black_gondolas:0 "黒いゴンドラ"
  desc_ven_black_gondolas:0 "裕福な市民の誇り（あるいはそれほど裕福でない人々の羨望）を軽減するために、どんな方法でもゴンドラを装飾することはできないと定められている。許可される唯一の色は、ゴンドラを防水するために使用されたピッチの色である黒のみである。"
  flavor_ven.24.t:0 "十人委員会の成長力"
- flavor_ven.24.d:0 "ヴェネツィアの大評議会は、千人を超える世襲の会員から成っており、おそらく最も迅速で効率的な運営体ではないだろう。したがって、当初、策略や陰謀から共和国を守ることを目的とした小規模で柔軟性のある十人委員会が、より多くの権限を引き継ぐようになったのは驚くことではない。\nしかし、自らの力を強めることによって、十人委員会は、より代表的な大評議会の影響力を減少させている。大評議会の一族の多くは、毎年選出される十人委員会の新たな構成員の地位がしばしば、古い貴族の小さな派閥によって独占されていることで、問題が行き過ぎだと感じている。元来意図されていた緊急事態への影響を制限することによって、十人委員会の権力を縮小する改革が提案されている。"
+ flavor_ven.24.d:0 "ヴェネツィア大評議会は、千人を超える世襲の会員から成っており、おそらく最も迅速で効率的な運営体ではないだろう。したがって、当初、策略や陰謀から共和国を守ることを目的とした小規模で柔軟性のある十人委員会が、より多くの権限を引き継ぐようになったのは驚くことではない。\nしかし、自らの力を強めることによって、十人委員会は、より代表的な大評議会の影響力を減少させている。大評議会の一族の多くは、毎年選出される十人委員会の新たな構成員の地位がしばしば、古い貴族の小さな派閥によって独占されていることで、問題が行き過ぎだと感じている。元来意図されていた緊急事態への影響を制限することによって、十人委員会の権力を縮小する改革が提案されている。"
  flavor_ven.24.a:0 "十人委員会の権限を制限する。"
  flavor_ven.24.b:0 "十人委員会を支援する。"
- flavor_ven.25.t:0 "十人委員会を拘束する法律を取り消す。"
+ flavor_ven.25.t:0 "十人委員会の抑制法案廃止"
  flavor_ven.25.d:0 "十人委員会を抑制する改革は、大評議会の会員の多くを落ち着かせたが、実際には、十人委員会は公式には持つべきでない大きな権限をまだ発揮している。数え切れないほどの会員を持つ大評議会がいかに非効率的であるかを考えれば、これは必ずしも悪いことではない…"
  flavor_ven.25.a:0 "十人委員会を統制しなければならない。"
  flavor_ven.25.b:0 "彼らの制限を無視しよう。"
