--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -793,7 +793,7 @@
  cultural_event.4.a:0 "もちろんだ。彼らには我々の支援が必要だ。"
  cultural_event.4.b:0 "いや、我々は他に問題を抱えている。"
  cultural_event.5.t:0 "最後の馬上槍試合"
- cultural_event.5.d:0 "我々は風を感じている。騎士道の伝統が近代化の嵐の前に消えていき、馬術に長けたエリートは、まもなく記憶に残る夢のようなものに過ぎなくなるだろう。世界は変わりつつあるが、最後にもう一度だけ…$COUNTRY$の騎士よ、さぁ馬に乗れ！"
+ cultural_event.5.d:0 "我々は風を感じている。近代化の暴風雨の前に騎士道の伝統は消えていき、馬術に長けたエリートは、まもなく記憶に残る夢のようなものに過ぎなくなるだろう。世界は変わりつつあるが、最後にもう一度だけ…$COUNTRY$の騎士よ、さぁ馬に乗れ！"
  cultural_event.5.a:0 "栄光へ向かって進め！"
  cultural_event.5.b:0 "いや、我々は時代に合わせる必要がある。"
  cultural_event.6.t:0 "聖ルカ組合の設立許可"
@@ -4297,7 +4297,7 @@
  culture_religion_events.2.dd.ttl:0 "§Y[Root.GetName]§!におけるすべての§Y[Root.Religion.GetName]§!および§Y[Root.Culture.GetName]§!の州は最長で§Y10§!年間、不穏度§R+5§!と布教強度§R-5§!を受け取ります。"
  culture_religion_events.2.e:0 "秩序は回復されるだろう。"
  culture_religion_events.3.t:0 "[Root.Monarch.GetName]の信仰"
- culture_religion_events.3.d:0 "[Root.Monarch.GetName]の信仰は、長い間、我々の[Root.GovernmentName]の先頭にいる[Root.GetNoblesReplacementForOtherGovernments]たちを仰天させる理由となってきた。しかし、時が経つにつれて、[Root.Monarch.GetHerHis]の影響力は、いくつかの「新しい人々」と、いくつかのより古い一族が、[Root.new_ruler_religion.GetReligionName]信仰を採り入れることとにさえつながっている。[Root.new_ruler_religion.GetReligionName]の儀式が[Root.Capital.GetCapitalName]の扉を開いたという事実は、[Root.Monarch.GetName]の礼拝の一般的な認知度の高まりとともに、我々の国家全体でますます一般的な儀式へと成長し、世界の他の地域と同様、国内外からの新しい改宗者を引き付けている。"
+ culture_religion_events.3.d:0 "[Root.Monarch.GetName]の信仰は、長い間、我々の[Root.GovernmentName]の主要な[Root.GetNoblesReplacementForOtherGovernments]たちを困惑させる原因となってきた。しかし、時が経つにつれて、[Root.Monarch.GetHerHis]の影響力により、一部の「新しい人々」だけでなく、旧家の家系の者たちでさえも、[Root.new_ruler_religion.GetReligionName]信仰に順応するようになっている。[Root.new_ruler_religion.GetReligionName]の儀式が[Root.Capital.GetCapitalName]に門戸を開いているという事実は、[Root.Monarch.GetName]の礼拝の一般的な認知度の高まりとともに、この儀式が我々の国家全体でますます一般的になってきており、国内だけでなく世界の他の地域からも新たな改宗者を惹きつけることにつながっている。"
  culture_religion_events.3.a:0 "素晴らしい！"
  culture_religion_events.3.b:0 "我々は、[Root.Monarch.GetTitle]の破壊的な権力を食い止めることを試みるべきだ。"
  culture_religion_events.4.t:0 "悪い影響"
@@ -4340,9 +4340,9 @@
  culture_religion_events.12.da:0 "[Root.other_advisor_religion.GetReligionName]の信心深い者たちは、[Root.Adm_Advisor.GetTitle][Root.Adm_Advisor.GetName]の昇格を関心と熱意を持って注視してきた。多くの人にとって[Root.Adm_Advisor.GetSheHe]は、国教に属していなくても、誰もが[Root.GetAdjective]国家でうまくやっていけることを証明するものとなっている。"
  culture_religion_events.12.db:0 "[Root.other_advisor_religion.GetReligionName]の信心深い者たちは、[Root.Dip_Advisor.GetTitle][Root.Dip_Advisor.GetName]の昇格を関心と熱意を持って注視してきた。多くの人にとって[Root.Dip_Advisor.GetSheHe]は、国教に属していなくても、誰もが[Root.GetAdjective]国家でうまくやっていけることを証明するものとなっている。"
  culture_religion_events.12.dc:0 "[Root.other_advisor_religion.GetReligionName]の信心深い者たちは、[Root.Mil_Advisor.GetTitle][Root.Mil_Advisor.GetName]の昇格を関心と熱意を持って注視してきた。多くの人にとって[Root.Mil_Advisor.GetSheHe]は、国教に属していなくても、誰もが[Root.GetAdjective]国家でうまくやっていけることを証明するものとなっている。"
- culture_religion_events.12.a:0 "いつか、あなたはすべてを[Root.Adm_Advisor.GetName]のように昇格させることができるだろう。"
- culture_religion_events.12.b:0 "いつか、あなたはすべてを[Root.Dip_Advisor.GetName]のように昇格させることができるだろう。"
- culture_religion_events.12.c:0 "いつか、あなたはすべてを[Root.Mil_Advisor.GetName]のように昇格させることができるだろう。"
+ culture_religion_events.12.a:0 "いつの日か、どんな人物でも[Root.Adm_Advisor.GetName]のように昇格できるだろう。"
+ culture_religion_events.12.b:0 "いつの日か、どんな人物でも[Root.Dip_Advisor.GetName]のように昇格できるだろう。"
+ culture_religion_events.12.c:0 "いつの日か、どんな人物でも[Root.Mil_Advisor.GetName]のように昇格できるだろう。"
  culture_religion_events.13.t:0 "高い地位の異教徒"
  culture_religion_events.13.da:0 "聖職者は長い間、高い地位で異教徒を利用することに反対してきた。[Root.Adm_Advisor.GetName]が[Root.Adm_Advisor.GetTitle]となると、彼らは声高に反対し、彼らの反論は時の経過とともに衰えることはなかった。国内外の有力な宗教学者の中には、非[Root.Religion.GetGroupName]の役人への露骨な偏愛のために、[Root.GovernmentName]を非難している者もいる。"
  culture_religion_events.13.db:0 "聖職者は長い間、高い地位で異教徒を利用することに反対してきた。[Root.Dip_Advisor.GetName]が[Root.Dip_Advisor.GetTitle]となると、彼らは声高に反対し、彼らの反論は時の経過とともに衰えることはなかった。国内外の有力な宗教学者の中には、非[Root.Religion.GetGroupName]の役人への露骨な偏愛のために、[Root.GovernmentName]を非難している者もいる。"
