--- a/source/localisation/third_rome_l_english.yml
+++ b/source/localisation/third_rome_l_english.yml
@@ -64,7 +64,7 @@
  tatar_raided_province_modifier:0 "タタールの襲撃"
  desc_tatar_raided_province_modifier:0 "この州はタタール人の襲撃に在っている。"
  russian_principality_events.1.t:0 "[appanage_province.GetName]公の陰謀"
- russian_principality_events.1.d:0 "キエフ・ルーシが在りし日頃から、ロシアの諸公国は横移動の年長相続法を採用していた。このことで、しばしば我らの王朝は最有力の子孫によって統治されたが、ときにはこのことが、キエフの継承順位へと入り込みたいと考える他の公位請求者を生むこととなった。\n$PREVIOUS_MONARCH$が世を去ってから、[Root.Monarch.Dynasty.GetName]家は[Root.Heir.GetName]を支援する者と寧ろ[appanage_province.GetName]を将来の王と見なす者の間で別れた。若き王子は、可及的に支援を求める叔父や兄弟たちのように説得する時間はほぼなく、彼の派閥は今、我らが[Root.Monarch.GetTitle][Root.Monarch.GetName]に最後通牒を送り付けてきた。"
+ russian_principality_events.1.d:0 "キエフ・ルーシが在りし日頃から、ロシアの諸公国は傍系の年長相続法を採用していた。このことで、しばしば我らの王朝は最有力の子孫によって統治されたが、ときにはこのことが、キエフの継承順位へと入り込みたいと考える他の公位請求者を生むこととなった。\n$PREVIOUS_MONARCH$が世を去ってから、[Root.Monarch.Dynasty.GetName]家は[Root.Heir.GetName]を支援する者と、寧ろ[appanage_province.GetName]を将来の王と見なす者の間で別れた。若き王子は、できるだけ多くの叔父や兄弟たちに彼を支持するよう可及的に説得し、彼の派閥は今、我らが[Root.Monarch.GetTitle][Root.Monarch.GetName]に最後通牒を送り付けてきた。"
  russian_principality_events.1.a:0 "[Root.Monarch.GetName]を支持する！"
  russian_principality_events.1.b:0 "[appanage_province.GetName]公を新たな後継者として指名する。"
  russian_principality_events.1.c:0 "[appanage_province.GetName]公の側に立つ。"
@@ -105,7 +105,7 @@
  russian_principality_events.9.a:0 "素晴らしいアイデアだ！"
  russian_principality_events.9.b:0 "我々の国内ではムスリムにそのような権利は与えられない。"
  russian_principality_events.10.t:0 "[kremlin_here.GetCapitalName]のクレムリン"
- russian_principality_events.10.d:0 "我が[Root.GovernmentName]が成長するに伴い、[kremlin_here.GetCapitalName]にある我が国の首都の重要性もまた増大している。多くのロシアにある都市の様に[kremlin_here.GetCapitalName]の中核は上流階級、管理当局、軍事部局をおさめるその城砦なるクレムリンである。城壁の外では拡大し続ける商業ポサード（入植地）の管区や普通の郊外が広がる。\n全体の配置はクレムリンの大きさと強さによって決まるが、多くの者は我々のそれが不適当に小さく古めかしいものとなるのではないかと危惧している。我が国の如き大望有る国家ならばそのクレムリンは絶えず増築し、拡張し、よく整備されているようにしなければならない。"
+ russian_principality_events.10.d:0 "我が[Root.GovernmentName]が成長するに伴い、[kremlin_here.GetCapitalName]にある我が国の首都の重要性もまた増大している。多くのロシアにある都市と同様に、[kremlin_here.GetCapitalName]の中核は上流階級、管理当局、軍事部局をおさめるその城砦なるクレムリンである。城壁の外では拡大し続ける商業ポサード（入植地）の管区や一般的な郊外が広がる。\n全体の配置はクレムリンの大きさと強さによって決まるが、多くの者は我々のそれが不適当に小さく古めかしいものとなるのではないかと危惧している。我が国の如き大望有る国家ならば、そのクレムリンは絶えず改善し、拡張し、よく整備されているようにしなければならない。"
  russian_principality_events.10.a:0 "これは多くの人的資源を必要とする。"
  russian_principality_events.10.b:0 "これは都市の住人に寄付させるよう要求する。"
  russian_principality_events.10.c:0 "これは教会が支払う。"
@@ -237,7 +237,7 @@
  custom_movement_speed:1 "現地の土地勘"
  custom_movement_speed_desc:1 "確実に地方で兵を募ることで、彼らが知る最良の土地を通って最も早く進める場所を見つけるて、我が軍隊を助けることができる。"
  custom_army_tradition_from_battle:1 "偵察兵の徴募"
- custom_army_tradition_from_battle_desc:1 "勝つにせよ、負けるにせよ、先頭から学ぶことは多い。我らの観察によって、戦闘教義をより良いものとするために、偵察兵が遠くから観測するようにすべきだ。"
+ custom_army_tradition_from_battle_desc:1 "勝つにせよ、負けるにせよ、戦闘から学ぶことは多い。偵察兵が遠くから観測することによって、観察から戦闘教義を改善できるようにすべきだ。"
  custom_monthly_militarized_society:1 "好戦的な社会"
  custom_monthly_militarized_society_desc:1 "軍事予算は即ち国家予算である。比類なき我が国の軍事力の前に何者か邪魔するであろう。"
  custom_reinforce_cost_modifier:1 "戦士の精神"
@@ -370,7 +370,7 @@
  patriarch_events.1.a:0 "[Root.GetAdjective]の聖人や祭りを強要しなくてはならない。"
  patriarch_events.1.b:0 "主張することで得られるものは少ない。"
  patriarch_events.2.t:0 "典礼の影響"
- patriarch_events.2.d:0 "[local_see_province.GetAreaName]の主教は[Root.Monarch.GetName]と[Root.Monarch.GetSheHe]が[local_see_province.GetCapitalName]の大聖堂の献納式を強引に行ったことに異議を唱えている。彼は、我らが与えた大規模な寄付に感謝していないわけではないと述べているが、主教は[Root.GovernmentName]の興味を引くために教会法を破ることを疑問に思っている。"
+ patriarch_events.2.d:0 "[local_see_province.GetAreaName]の主教は[Root.Monarch.GetName]が[local_see_province.GetCapitalName]の大聖堂の献納式を強引に行ったことに異議を唱えている。彼は、我らが与えた大規模な寄付に感謝していないわけではないと述べているが、主教は[Root.GovernmentName]の興味を引くために教会法を破ることを疑問に思っている。"
  patriarch_events.2.a:0 "身の程を教えてやる！"
  patriarch_events.2.b:0 "謙虚さを示すために、さらなる寄付を教会に行なおう。"
  patriarch_events.3.t:0 "[local_see_province.GetName]の大聖堂"
@@ -382,7 +382,7 @@
  patriarch_events.4.a:0 "異端者は燃やさなければならない！"
  patriarch_events.4.b:0 "明らかに彼が間違っている。"
  patriarch_events.5.t:0 "[monastic_province.GetName]で修道院が繁栄"
- patriarch_events.5.d:0 "[monastic_province.GetAreaName]の僧侶が報告したところによると、地元の修道士の共同体が前例のない速度で拡大しているということである。[monastic_province.GetCapitalName]にある地元の修道院の荘園は事実相当に拡大しており、地元の行政官の羨望の的となったままである。知事が修道士たちとの衝突に巻き込まれ、そこで[Root.GovernmentName]と彼らの土地の境界決定がされている。\n今回は、中央の権威を介入させ論争に割り込んだ。修道院を助けることで彼らの感謝を得られるだろうが、これは国家の土地をもっと得られる機会となるかもしれない。"
+ patriarch_events.5.d:0 "[monastic_province.GetAreaName]の司教が報告したところによると、地元の修道士の共同体が前例のない速度で拡大しているということである。[monastic_province.GetCapitalName]にある地元の修道院の荘園は事実相当に拡大しており、地元の行政官の羨望の的となっている。[Root.GovernmentName]の土地と修道士の土地の境界がどこなのかをめぐって、知事は修道士たちの紛争に巻き込まれた。\n中央当局が介入し、紛争を解決する時が来た。修道院を助けることで彼らの感謝を得られるだろうが、国家の土地をもっと得られる機会にもなるかもしれない。"
  patriarch_events.5.a:0 "当局が正しいのは明らかだ！"
  patriarch_events.5.b:0 "この聖職者たちに耳を傾けねば。"
  veche_republic_legacy:0 "ヴェーチェ共和制"
